Home page added

--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -2,7 +2,33 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <!-- Wesite Logo  -->
+    <link
+      rel="icon"
+      sizes="196x196"
+      href="//img.ssensemedia.com/image/upload/v1574192255/favicon_ssense/favicon-196x196_vvei5a.png"
+    />
+    <link
+      rel="icon"
+      sizes="150x150"
+      href="//img.ssensemedia.com/image/upload/v1574192254/favicon_ssense/mstile-150x150_aawpmj.png"
+    />
+    <link
+      rel="icon"
+      sizes="96x96"
+      href="//img.ssensemedia.com/image/upload/v1574192255/favicon_ssense/favicon-96x96_f2fnwr.png"
+    />
+    <link
+      rel="icon"
+      sizes="16x16"
+      href="//img.ssensemedia.com/image/upload/v1574192255/favicon_ssense/favicon-16x16_byyzld.png"
+    />
+    <link
+      rel="icon"
+      sizes="32x32"
+      href="//img.ssensemedia.com/image/upload/v1574192255/favicon_ssense/favicon-32x32_sdslfh.png"
+    />
+    <!-- End Wesite Logo  -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -24,6 +50,28 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!-- Some Font -->
+    <link
+      rel="preload"
+      href="//res.cloudinary.com/ssenseweb/raw/upload/v1504879826/web/fonts/favorit-times/FavoritSSENSE-Inter.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="preload"
+      href="//res.cloudinary.com/ssenseweb/raw/upload/v1504879826/web/fonts/favorit-times/FavoritSSENSE-Regular.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="preload"
+      href="//res.cloudinary.com/ssenseweb/raw/upload/v1492612618/web/fonts/ssense-font/ssense-fonts.woff"
+      as="font"
+      type="font/woff"
+      crossorigin="anonymous"
+    />
     <title>React App</title>
   </head>
   <body>
