--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -72,7 +72,7 @@
       type="font/woff"
       crossorigin="anonymous"
     />
-    <title>React App</title>
+    <title>Luxury fashion & independent designers | SSENSE</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
